# pgp2hc

./: Cargo.toml  README.md
data/: ec_testkey1.hash  john-test.txt  psirt_pgp_key.txt  testkey1.hash  testkey1.txt  testkey2.hash  testkey2.key  testkey3.hash
scripts/: build_windows.sh  gpg_keygen.sh
src/: convert.rs  hash.rs  input.rs  lib.rs  main.rs  parse.rs  test.rs
