[package]
name = "pgp2hc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
pgp = "0.10"
rsa = "0.9.2"

[lib]
doctest = false

[[bin]]
name = "main"
path = "src/main.rs"
test = false
doctest = false
